add recommend feature

--- a/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.resx
+++ b/Source/Microsoft.Teams.Apps.FAQPlusPlus/Properties/Strings.resx
@@ -700,4 +700,8 @@ I am your friendly Q&amp;A bot that helps you provide support to people who inte
     <value>Ticket ID:</value>
     <comment>Title fact is used to show the title ID.</comment>
   </data>
+  <data name="RecommendMessage" xml:space="preserve">
+    <value>I didn't find a relevant answer for your question. you can try ask me:</value>
+    <comment>Message when bot recommend user questions.</comment>
+  </data>
 </root>
